--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,8 @@
   <meta name="description" content="">
   <meta name="keywords" content="">
   <meta charset="UTF-8">
-  <title>Royal Shop</title>
+  <title>Royal Mall</title>
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>React App</title>
 
   <!-- CSS -->
   <link rel="stylesheet" href="%PUBLIC_URL%/css/linearicons.css">
